--- a/amplify.yml
+++ b/amplify.yml
@@ -5,28 +5,26 @@ applications:
       phases:
         build:
           commands:
-            - echo "Build started on $(date)"
-            - LOG_GROUP="/aws/amplify/$(echo $AWS_BRANCH | tr '/' '-')"
+            - echo "Build started on `date`"
+            - LOG_GROUP="/aws/amplify/build-logs"
             - LOG_STREAM="build-log"
 
             # Ensure AWS CLI is installed
             - which aws || curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
-
-            # Check if log group exists, then create it
+            
+            # Create log group if not exists
             - |
               if ! aws logs describe-log-groups --log-group-name-prefix "$LOG_GROUP" | grep "$LOG_GROUP"; then
                 aws logs create-log-group --log-group-name "$LOG_GROUP"
               fi
 
             # Create log stream
-            - aws logs create-log-stream --log-group-name "$LOG_GROUP" --log-stream-name "$LOG_STREAM" || echo "Log stream already exists"
+            - aws logs create-log-stream --log-group-name "$LOG_GROUP" --log-stream-name "$LOG_STREAM"
 
-            # Get sequence token
+            # Send log event
             - SEQUENCE_TOKEN=$(aws logs describe-log-streams --log-group-name "$LOG_GROUP" --log-stream-name "$LOG_STREAM" --query "logStreams[0].uploadSequenceToken" --output text || echo "")
-
-            # Send initial log event
             - |
-              if [[ "$SEQUENCE_TOKEN" == "None" || -z "$SEQUENCE_TOKEN" ]]; then
+              if [[ "$SEQUENCE_TOKEN" == "None" ]]; then
                 aws logs put-log-events --log-group-name "$LOG_GROUP" --log-stream-name "$LOG_STREAM" --log-events timestamp=$(date +%s000),message="Build started"
               else
                 aws logs put-log-events --log-group-name "$LOG_GROUP" --log-stream-name "$LOG_STREAM" --log-events timestamp=$(date +%s000),message="Build started" --sequence-token "$SEQUENCE_TOKEN"
